--- a/index.html
+++ b/index.html
@@ -288,10 +288,15 @@
                     <div class="form-group">
                       <label for="fsubscribe">Subscribe</label>
                     </div>
+                    <div class="mailbutton">
                       <input type="email" id="fsubscribe" name="fsubscribe" placeholder="E-mail">
-                      <input type="submit" value="Subscribe">
-                      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"><path fill="#fff" d="M24 2 0 13.25l7.67 2.367L19.5 6.375l-8.998 10.116.007.003-.009-.003V22l4.301-4.182 5.45 1.682L24 2Z"/></svg>
-                  </form>
+                      <button type="button">
+                        Subscribe
+                        <input type="submit">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"><path fill="#fff" d="M24 2 0 13.25l7.67 2.367L19.5 6.375l-8.998 10.116.007.003-.009-.003V22l4.301-4.182 5.45 1.682L24 2Z"/></svg>
+                       </button>
+                    </div>    
+                </form>
             </div>
         </div>
     </footer>
