added to html and css

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="menuler fixed">
             <div class="sol"> <a href="#"><span>WEB</span>STUDIO</a>
                 <nav>
-                    <ul class="menu">
+                    <ul class="menu ">
                         <li>
                             <a class="studio" href="#">Studio
                             </a>
@@ -32,6 +32,7 @@
                             </li>
                     </ul>
                 </nav>
+                <button class="menu-toggle">Menu</button>
             </div>
             <div class="sag">
                 <address>
