added html and css

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                             <input type="tel" id="phone" name="phone" placeholder  required>
 
                             <label for="email">Email</label>
-                            <input type="mail" id="email" name="email" placeholder required>
+                            <input type="mail" id="email" name="email" placeholder="E-mail" required>
 
                             <label for="comment">Comment</label>
                             <textarea id="comment" placeholder="Text input" name="comment" rows="6" cols="50"></textarea>
