--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <div class="menuler fixed">
-            <div class="sol"> <a href="#"><span>WEB</span>STUDIO</a>
+            <div class="sol"> <a class="stud" href="#"><span>WEB</span>STUDIO</a>
                 <nav>
                     <ul class="menu">
                         <li>
